# bitpart-rs

./: .gitignore  Cargo.toml  README.md  make-data.sh  rustfmt.toml
benches/: benchmarks.rs
example/: Cargo.toml
example/src/: main.rs
example/src/bruteforce/: main.rs
example/src/colors/: main.rs
example/src/custom_metric/: main.rs
example/src/nasa/: main.rs
example/src/synthetic/: main.rs
generators/: .gitignore  Cargo.toml
generators/src/: main.rs
nearest-neighbours/: Cargo.toml
nearest-neighbours/src/: main.rs
scripts/: make.py  results.txt  results_processed.txt
sisap-data/: Cargo.toml
sisap-data/src/: cartesian_parser.rs  colors.rs  lib.rs  nasa.rs  parser.rs
src/: builder.rs  lib.rs  on_disk.rs  parallel.rs  sequential.rs
src/exclusions/: mod.rs
src/metric/: euclidean.rs  mod.rs
