[package]
name = "bitpart"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.1"
itertools = "0.10.5"
rayon = { version = "1.6.1", optional = true }
serde = { version = "1.0.152", features = ["derive"], optional = true }
bincode = { version = "1.3.3", optional = true }

[dev-dependencies]
criterion = "0.4"
sisap-data = { path = "sisap-data" }
serde_json = "1.0.94"

[[bench]]
name = "benchmarks"
harness = false

[workspace]
members = [".", "sisap-data", "example", "generators", "nearest-neighbours"]

[features]
rayon = ["dep:rayon"]
serde = ["dep:serde"]
on_disk = ["rayon", "dep:serde", "bitvec/serde", "dep:bincode"]

[profile.test]
opt-level = 3
