[package]
name = "bitpart"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = { version = "1.0.1", features = ["serde"], optional = true }
bitvec_simd = "0.20.5"
itertools = "0.10.5"
rayon = { version = "1.6.1", optional = true }
serde = { version = "1.0.152", features = ["derive"], optional = true }
bincode = { version = "1.3.3", optional = true }
memmap2 = { version = "0.5.10", optional = true }
thiserror = "1.0.40"

[dev-dependencies]
criterion = "0.4"
sisap-data = { path = "sisap-data" }
serde_json = { version = "1.0.94", features = ["float_roundtrip"] }
rand = "0.8.5"

[[bench]]
name = "benchmarks"
harness = false

[workspace]
members = [".", "sisap-data", "example", "generators", "nearest-neighbours"]

[features]
par = ["dep:rayon"]
serde = ["dep:serde"]
disk = ["par", "dep:serde", "bitvec", "dep:bincode", "dep:memmap2"]

[profile.test]
opt-level = 3
