[package]
name = "example"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitpart = { path = "../", features = ["rayon"] }
sisap-data = { path = "../sisap-data" }

[[bin]]
name = "nasa"
path = "src/nasa/main.rs"

[[bin]]
name = "colors"
path = "src/colors/main.rs"

[[bin]]
name = "synthetic"
path = "src/synthetic/main.rs"