[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitpart = { path = "../", features = ["rayon"] }
itertools = "0.10.5"
sisap-data = { path = "../sisap-data" }

[[bin]]
name = "nasa"
path = "src/nasa/main.rs"

[[bin]]
name = "colors"
path = "src/colors/main.rs"

[[bin]]
name = "synthetic"
path = "src/synthetic/main.rs"

[[bin]]
name = "bruteforce"
path = "src/bruteforce/main.rs"
