[package]
name = "generators"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
indicatif = "0.17.3"
itertools = "0.10.5"
rand = "0.8.5"
rand_distr = "0.4.3"
