[package]
name = "nearest-neighbours"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
sisap-data = { path = "../sisap-data" }
bitpart = { path = "../" }
rayon = "1.7.0"
serde_json = "1.0.94"
